# youtube-data-scraper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STRUCTURE.md  commands.txt  pyproject.toml  scrape.py
docs/: commands.txt
examples/questions/: README.md  language-detection.yaml
shared/: __init__.py  youtube.py
src/ytce/: __init__.py  __main__.py  config.py
src/ytce/ai/: NEXT_STEPS.md  feature_to_implement.txt  test_job_demo.py  test_loader_demo.py
src/ytce/ai/domain/: comment.py  config.py  result.py  task.py
src/ytce/ai/input/: __init__.py  comments.py  config.py  job.py  questions.py  validators.py
src/ytce/ai/promts/: formatter.py  templates.py
src/ytce/ai/tasks/: __init__.py  base.py  language_detection.py
src/ytce/cli/: main.py
src/ytce/models/: __init__.py  comment.py  video.py
src/ytce/pipelines/: __init__.py  batch_videos.py  channel_comments.py  channel_videos.py  video_comments.py
src/ytce/storage/: __init__.py  paths.py  resume.py  writers.py
src/ytce/utils/: helpers.py  logging.py  parsing.py  videos.py
src/ytce/youtube/: __init__.py  channel_videos.py  comments.py  extractors.py  html.py  innertube.py  pagination.py  session.py
tests/: README.md  test_ai_loader.py  test_cli.py  test_job_loader.py
youtube-channel-videos/: channel_videos.py
youtube-comment-downloader/: __init__.py  downloader.py
