[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-comment-explorer"
version = "0.1.0"
description = "Unified tool for scraping YouTube channel videos metadata and comments without the YouTube API."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[project.scripts]
ytce = "ytce.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
